# bevy_rubiks

./: Cargo.toml  README.md  index.html  rustfmt.toml
crates/cubesim/: Cargo.toml  README.md
crates/cubesim/examples/: solver.rs
crates/cubesim/src/: generic_cube.rs  lib.rs  prelude.rs  scramble_parser.rs  thistlethwaite.rs
crates/cubesim/src/facelet_cube/: cube.rs  moves.rs
crates/cubesim/src/geometric_cube/: cube.rs  moves.rs  sticker.rs
src/: lib.rs  main.rs  menu.rs  player.rs  simulator.rs
