[package]
name = "bevy_rubiks"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["crates/cubesim"]



[dependencies]
bevy = { version = "0.12.0" }
cubesim = { path = "crates/cubesim" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28.7", default-features = false }
image = { version = "0.24", default-features = false }



[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1


[build-dependencies]
embed-resource = "1.4"
