[package]
name = "cubesim"
description = "Rubik's Cube simulation and solving library."
version = "0.0.7"
authors = ["Vincent Wong <vincent@vwong.dev>"]
edition = "2021"
keywords = ["rubiks", "cube", "rubiks_cube"]
license = "MIT"
repository = "https://github.com/V-Wong/CubeSimRS/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.46.1"
glam = "0.24.2"
derive_more = "0.99.16"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
test-case = "3.2.1"

[[bench]]
name = "facelet_cube"
harness = false

[[bench]]
name = "geometric_cube"
harness = false

[[bench]]
name = "thistlethwaite"
harness = false
